[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
rayon = "1.7.0"
tokio = { version = "1.12.0", features = ["full"] }
serde =  { version = "1", features = ["derive"] }
serde_yaml = "0.9"
